fixed overflow for join event input

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -228,7 +228,8 @@ md-backdrop {
 }
 
 .content-clear {
-    background-color: #33333300
+    background-color: #33333300;
+    overflow: visible;
 }
 
 .join-input > input::placeholder {
